--- a/Movie_Booking_final.ipynb
+++ b/Movie_Booking_final.ipynb
@@ -110,9 +110,15 @@
         "choose()\n",
         "\n",
         "#This is to book the show and tabulate the data\n",
+        "#Module 2\n",
         "import pandas as pd\n",
+        "import qrcode\n",
         "import random\n",
         "from tabulate import tabulate\n",
+        "from PIL import Image\n",
+        "import io\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
         "movies = db.movielist\n",
         "theatres = db.theatrelist\n",
         "booking = db.bookingdb\n",
@@ -157,7 +163,7 @@
         "    'Theatre_code' : 4,       \n",
         "    'Theatre_Names' : 'Thanga Regal Cinemas',\n",
         "    'Available_Seats' : 100},]\n",
-        "#movies.insert_many(movie_list) #Use insert when you are changing movie list and theatre list\n",
+        "#movies.insert_many(movie_list)\n",
         "#theatres.insert_one(theatre_list)\n",
         "#moviefin = movies.find_one()\n",
         "\n",
@@ -185,7 +191,6 @@
         "\n",
         "  def seat_taken():\n",
         "    global num_seats\n",
-        "    \n",
         "    print('Available seats in the theatre: ', x['Available_Seats'])\n",
         "    num_seats = int(input('Enter number of seats (Max:5): '))\n",
         "    if num_seats <= 5:\n",
@@ -195,29 +200,42 @@
         "\n",
         "  booking_id = random.randrange(110000,170000)\n",
         "\n",
+        "  img = qrcode.make(f'{booking_id},{seltheatre},{selmovie},{timing},{num_seats}')\n",
+        "  type(img)\n",
+        "  img.save(f'{booking_id}.png')\n",
+        "  im = Image.open(f'/content/{booking_id}.png')\n",
+        "  image_bytes = io.BytesIO()\n",
+        "  im.save(image_bytes, format='PNG')\n",
         "  booked = {\n",
         "      '_id' :booking_id,\n",
         "      'Movie_name': selmovie,\n",
         "      'Theatre_name': seltheatre,\n",
         "      'Timing': timing,\n",
-        "      'Seats_booked': num_seats}\n",
+        "      'Seats_booked': num_seats,\n",
+        "      'qrcode' : image_bytes.getvalue()\n",
+        "  }\n",
         "  booking.insert_one(booked)\n",
         "movieselect()\n",
         "\n",
-        "#Print the Receipt\n",
+        "#Receipt\n",
         "theatrename  = f'''{seltheatre}\n",
         "                     \\n'''\n",
         "print('*' * 50)\n",
         "print(f'\\t{theatrename}')\n",
-        "print('*' * 50)\n",
+        "print('=' * 50)\n",
         "print('\\n')\n",
         "print(f'\\tBooking Id: {booking_id}')\n",
         "print(f'\\tMovie booked for: {selmovie}')\n",
         "print(f'\\tNumber of Seats: {num_seats}')\n",
         "print(f'\\tMovie timing: {timing}')\n",
         "print('\\n')\n",
-        "print('*' * 50)\n",
+        "print('=' * 50)\n",
         "print('\\tEnjoy your show and have fun!')\n",
+        "print('*' * 50)\n",
+        "image = booking.find_one({\"_id\":booking_id})\n",
+        "pil_img = Image.open(io.BytesIO(image['qrcode']))\n",
+        "plt.imshow(pil_img)\n",
+        "plt.show()\n",
         "print('*' * 50)\n"
       ]
     }
